Inventory graph enhancement. split up into subplots

--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -4,7 +4,7 @@
 <div style="width:100vw;height:2vh;background-color:#37324b"></div>
 {% block content %}
 {% include 'nav_bar.html' %}
-<h6 style="text-align:center">Python Matplotlib graphs</h6>
+<h6 style="margin-left:20vw;text-align:center">Python Matplotlib graphs</h6>
 <!--<form id="search" style="align-items:center;text-align:center;margin-top:1vh;margin-bottom:1vh" action="{{ url_for('data_analysis') }}" method="post">
    <label for=""topic">Create Graph for a Topic</label>
    <select id="topic" name="topics">
