--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -15,7 +15,7 @@
     {% endif %}
     <form id="search" style="margin-left:2%" action="{{ url_for('wiki_search_results') }}" method="post">
         <div style="vertical-align:middle">
-            <label for="search">Search:</label>
+            <label for="search">New Topic:</label>
             <input id="search" type="text" name="search_button" placeholder="Search Wikipedia...">
             <input style="height:auto" type="image" src="static/assets/search.svg" alt="search" />
             <label for="pages"># of pages</label>
