--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -54,10 +54,10 @@
                             <p><img src="static/assets/add_library.svg" alt="Create new Library"> - Create a new library/database, then search/add the topics you want.</p>
                         </li>
                         <li>
-                            <p>The dropdown list will show all of the current libraries available for viewing.  Select a different one, click the <img src="static/assets/switch.svg" alt="Switch Library"> icon, and then you will see the cells on the left side updated with the contents of that library.</p>
+                            <p><img src="static/assets/switch.svg" alt="Switch Library"> - switch to a different library from the dropdown.</p>
                         </li>
                         <li>
-                            <p>The "New Topic" Search text box will search Wikipedia for the topic of your choosing. Click the <img src="static/assets/search.svg" alt="Wikipedia Search"> to execute the search.  In the results page you can choose one or many different Wikipedia pages to store and it will also initialize those entries with 20 related Youtube videos related to the title of the Wikipedia page(s) chosen.</p>
+                            <p><img src="static/assets/search.svg" alt="Wikipedia Search"> - Enter search text, choose the number of pages, and then search Wikipedia.  Choose from the resultant list and it will insert 20 related Youtube videos</p>
                         </li>
                         <li>
                             <p><img src="static/assets/library.svg" alt="Library Home"> - return to this page</p>
