--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
                 <div class="col-md-12 col-xs-12">
                     <ul class="main-nav">
                         <li><a href="{{url_for('index')}}">Home</a></li>
+                        <li><a href="https://github.com/JackManu/portfolio" target="_blank">GitHub</a></li>
                         <li><a href="{{url_for('aboutme')}}">About Me</a></li>
                         <li><a href="{{url_for('aboutthis')}}">About This Site</a></li>
                         <li><a href="{{url_for('comments')}}">Feedback</a></li>
