--- a/templates/index.html
+++ b/templates/index.html
@@ -110,7 +110,7 @@
             }
         });
     </script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>-->
     <script src="static/js/jquery.counterup.min.js"></script>
     <script>
         // Counterup
