--- a/templates/progress_bar.html
+++ b/templates/progress_bar.html
@@ -7,14 +7,15 @@
 </div>
 <style>
     #myProgress {
-        width: 50%;
-        height: 25%;
-        margin-left:30vw;
-        margin-top:45vh;
+        width: 45vw;
+        height: 100px;
         background-color: darkgrey;
         align-items: center;
         vertical-align: middle;
         display: none;
+        position: relative;
+        border: 1px solid black;
+        margin-left: 25vw;
     }
 
     #progress_bar {
