--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     <link href="static/styles/bootstrap-theme.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles/swiper.min.css">
     <link href="static/styles/style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
